# rhino-config

./: .gitignore  Cargo.toml  README.md  build.rs  config.py  rustfmt.toml
.github/workflows/: release.yml  rust.yml
src/: cli.rs  commands.rs  main.rs
src/commands/: disable.rs  enable.rs  switch_kernel.rs
