[package]
name = "rhino-config"
version = "0.1.0"
authors = ["wizard-28 <wiz28@protonmail.com>"]
edition = "2021"
description = "Utility to edit rolling rhino remix config"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[dependencies]
anyhow = "1.0.57"
clap = { version = "~3.1.15", features = ["derive"] }
indoc = "1.0.4"

[build-dependencies]
clap = { version = "~3.1.15", features = ["derive"] }
clap_complete = "3.1.2"
clap_mangen = "0.1.6"

[dev-dependencies]
rstest = "0.12.0"
tempfile = "3.3.0"
